@@ -23,6 +23,7 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
 - documentation:
   + Ken Williams <ken@forum.swarthmore.edu>
     list archive  http://forum.swarthmore.edu/epigone/modperl
+  + findmail archive http://www.findmail.com/
   + modperl.opensrc.org
   + PerlRun::handler
   + Frank's FAQ update: http://www.ping.de/~fdc/mod_perl/mod_perl_faq.tar.gz
